Enunciado de 2019/2/MAT1620/11

--- a/2019/2/MAT1620/11/enunciado.tex
+++ b/2019/2/MAT1620/11/enunciado.tex
@@ -128,5 +128,6 @@
 \item Calcule
 	$$ \displaystyle\int_0^1 \dfrac{x^b - x^a}{log\ x}dx$$
 	sabiendo que $\displaystyle\int_a^b x^y dy = \dfrac{x^b - x^a}{log\ x}$.
+\item Calcula el volumen que abarca la función $f(x,y) = x^2y$ en la región $x \in [-2, 3]$, $y \in [0,2]$.
 \end{preguntas}
 \end{document}
