Solución de 2019/2/MAT1620/11

--- a/2019/2/MAT1620/11/solucion.tex
+++ b/2019/2/MAT1620/11/solucion.tex
@@ -164,5 +164,9 @@ Reemplazando con la información dada, tenemos que:
 		con lo que:
 		$$ \displaystyle\int_0^1 \dfrac{x^b - x^a}{log\ x}dx = ln\left|\dfrac{b+1}{a+1}\right| $$
 \end{solucion}
+\item Calcula el volumen que abarca la función $f(x,y) = x^2y$ en la región $x \in [-2, 3]$, $y \in [0,2]$.
+\begin{solucion}
+
+\end{solucion}
 \end{preguntas}
 \end{document}
