Enunciado de 2019/2/MAT1620/11

--- a/2019/2/MAT1620/11/enunciado.tex
+++ b/2019/2/MAT1620/11/enunciado.tex
@@ -58,7 +58,7 @@
 }
 
 \newcommand{\ayudantia}{{\sc Ayudantía 11}}
-\newcommand{\tituloayu}{Lagrange e integrales múltiples}
+\newcommand{\tituloayu}{Lagrange e integrales dobles}
 \newcommand{\fecha}{5 de diciembre de 2019}
 \newcommand{\sigla}{MAT1620}
 \newcommand{\nombre}{Cálculo II}
