--- a/2019/2/MAT1620/11/solucion.tex
+++ b/2019/2/MAT1620/11/solucion.tex
@@ -58,7 +58,7 @@
 }
 
 \newcommand{\ayudantia}{{\sc Ayudantía 11}}
-\newcommand{\tituloayu}{Lagrange e integrales múltiples}
+\newcommand{\tituloayu}{Lagrange e integrales dobles}
 \newcommand{\fecha}{5 de diciembre de 2019}
 \newcommand{\sigla}{MAT1620}
 \newcommand{\nombre}{Cálculo II}
@@ -118,7 +118,43 @@
 \begin{preguntas}
 \item Hallar los valores extremos de $f(x,y) = x^2+2y^2-2x+3$ en el disco cerrado $x^2+y^2 \leq 10$.
 \begin{solucion}
+Cuando tenemos restricciones, debemos hacer un paso adicional. \\
+\\
+En primer lugar, encontramos los puntos críticos igual que siempre, es decir, igualando la gradiente a cero y solo guardamos los que cumplan con las restricciones. \\
+\\
+Luego, utilizamos Lagrange para encontrar los puntos críticos de los bordes. Para esto, definimos cada restricción como una función adicional, despejando toda la restricción hacia un lado de tal manera que se iguale a cero. Entonces, resolvemos el sistema
+$$\nabla f = \lambda \nabla g + \mu \nabla h + \dots$$
+$$g(x,y) = 0, \quad h(x,y) = 0, \dots$$
+para obtener los puntos críticos de los bordes.\\
+\\
+Finalmente, evaluamos todos los puntos críticos obtenidos para ver cual es el máximo y cual es el mínimo.\\
 
+Procedamos con le ejercicio:\\
+
+En primer lugar, tenemos que
+$$\nabla f = \begin{pmatrix} 2x - 2 \\ 4y \end{pmatrix} = \begin{pmatrix} 0 \\ 0 \end{pmatrix}$$
+Esto se traduce en el sistema
+$$\begin{array}{rcl} 2x-2 & = & 0 \\ 4y & = & 0 \end{array}
+\ra 
+\begin{array}{rcl} x & = & 1 \\ y & = & 0 \end{array}$$
+Por lo que $P_1(1,0)$. Notemos que este punto si cumple con la restricción, ya que $1^2 + 0^2 \leq 10$, por lo que si es un punto crítico.\\
+\\
+Veamos ahora que sucede con los bordes. Sea
+$$g(x,y) = x^2 + y^2 - 10$$
+$$\nabla g = \begin{pmatrix} 2x \\ 2y \end{pmatrix}$$
+Definimos el sistema
+$$\begin{array}{rcl} \nabla f & = & \lambda \nabla g \\ g(x,y) & = & 0 \end{array}
+\ra 
+\begin{array}{rcl}
+2x-2 & = & \lambda 2x \\
+4y & = & \lambda 2y \\
+x^2+y^2 & = & 10
+\end{array}$$
+Para resolver este sistema, sería tentador pasar el $y$ diviviendo en la segunda ecuación, sin embargo, recordemos que este podría ser cero, por lo que no podemos hacerlo directamente. Si queremos dividir por algun termino que podría ser cero, debemos ver todos los casos posibles (en esta caso son dos, $y = 0$, $y \neq 0$).
+\begin{itemize}
+\item $y = 0$
+\item $y \neq 0$
+\end{itemize}
 \end{solucion}
 \item Determine el máximo y el mínimo valor que alcanza la expresión $z=x^2-4xy-y^2+2y$, para $x\geq0;\quad y\geq0;\quad x+y\leq2$.
 \begin{solucion}
