--- a/2019/2/MAT1620/11/enunciado.tex
+++ b/2019/2/MAT1620/11/enunciado.tex
@@ -118,8 +118,7 @@
 \begin{preguntas}
 \item Hallar los valores extremos de $f(x,y) = x^2+2y^2-2x+3$ en el disco cerrado $x^2+y^2 \leq 10$.
 \item Determine el máximo y el mínimo valor que alcanza la expresión $z=x^2-4xy-y^2+2y$, para $x\geq0;\quad y\geq0;\quad x+y\leq2$.
-\item Hallar el punto más cercano al origen de la curva definida por las siguientes ecuaciones
-	$$x^2-xy+y^2-z^2=1,\qquad x^2+y^2=1$$
+\item Si el plano $x+y+2z=2$ corta al paraboloide $z=x^2+y^2$ se forma una elipse. Encuentre los puntos de la elipse que están más cerca y más lejos del origen.
 \item Resolver las siguientes integrales múltiples
 \begin{tasks}(2)
 \task $\displaystyle\int_2^4 \displaystyle\int_1^2 ye^{xy}dxdy$
@@ -128,6 +127,5 @@
 \item Calcule
 	$$ \displaystyle\int_0^1 \dfrac{x^b - x^a}{log\ x}dx$$
 	sabiendo que $\displaystyle\int_a^b x^y dy = \dfrac{x^b - x^a}{log\ x}$.
-\item Calcula el volumen que abarca la función $f(x,y) = x^2y$ en la región $x \in [-2, 3]$, $y \in [0,2]$.
 \end{preguntas}
 \end{document}
