--- a/2019/2/MAT1620/11/solucion.tex
+++ b/2019/2/MAT1620/11/solucion.tex
@@ -234,8 +234,7 @@ $$f(P_5) = f(0,1) = 1$$
 $$f(P_6) = f\left(\dfrac{3}{4}, \dfrac{5}{4}\right) = -\dfrac{9}{4}$$
 Entonces, concluimos que el mínimo es $-\dfrac{9}{4}$ y el máximo es $4$.
 \end{solucion}
-\item Hallar el punto más cercano al origen de la curva definida por las siguientes ecuaciones
-	$$x^2-xy+y^2-z^2=1,\qquad x^2+y^2=1$$
+\item Si el plano $x+y+2z=2$ corta al paraboloide $z=x^2+y^2$ se forma una elipse. Encuentre los puntos de la elipse que están más cerca y más lejos del origen.
 \begin{solucion}
 
 \end{solucion}
@@ -273,10 +272,6 @@ Reemplazando con la información dada, tenemos que:
 		$$ = ln|y+1|\ev_a^b $$
 		con lo que:
 		$$ \displaystyle\int_0^1 \dfrac{x^b - x^a}{log\ x}dx = ln\left|\dfrac{b+1}{a+1}\right| $$
-\end{solucion}
-\item Calcula el volumen que abarca la función $f(x,y) = x^2y$ en la región $x \in [-2, 3]$, $y \in [0,2]$.
-\begin{solucion}
-
 \end{solucion}
 \end{preguntas}
 \end{document}
