--- a/2019/2/MAT1620/11/solucion.tex
+++ b/2019/2/MAT1620/11/solucion.tex
@@ -236,7 +236,64 @@ Entonces, concluimos que el mínimo es $-\dfrac{9}{4}$ y el máximo es $4$.
 \end{solucion}
 \item Si el plano $x+y+2z=2$ corta al paraboloide $z=x^2+y^2$ se forma una elipse. Encuentre los puntos de la elipse que están más cerca y más lejos del origen.
 \begin{solucion}
-
+Como tenemos que minimizar la distancia al origen, la función a minimizar es
+$$f(x,y,z) = \sqrt[]{x^2+y^2+z^2}$$
+Notemos también que los óptimos de esta función serán los mismos que los de
+$$f(x,y,z) = x^2 + y^2 + z^2$$
+Por lo tanto, optimizaremos esta última sujeta a las restricciones
+$$x+y+2z=2 \quad, \quad z=x^2+y^2$$
+Como solo nos interesa el borde, es decir, la elipse, podemos hacer Lagrange directamente.\\
+\\
+Sea
+$$g(x,y,z) = x+y+2z - 2, \quad h(x,y,z) = x^2+y^2 - z$$
+Tenemos que
+$$\nabla f = \begin{pmatrix} 2x \\ 2y \\ 2z \end{pmatrix} 
+\quad 
+\nabla h = \begin{pmatrix} 1 \\ 1 \\ 2 \end{pmatrix}
+\quad 
+\nabla g = \begin{pmatrix} 2x \\ 2y \\ -1 \end{pmatrix}$$
+Definimos el sistema
+$$\begin{array}{rcl} \nabla f & = & \lambda \nabla g + \mu \nabla h \\
+g(x,y,z) & = & 0 \\
+h(x,y,z) & = & 0 \end{array}
+\ra 
+\begin{array}{rcll}
+2x & = & \lambda + \mu 2x & (1)\\
+2y & = & \lambda + \mu 2y & (2)\\
+2z & = & 2\lambda - 1 & (3)\\
+x+y+2z & = & 2 & (4)\\
+z & = & x^2+y^2 & (5)
+\end{array}$$
+Haciendo $(1) - (2)$, obtenemos
+$$2x-2y = 2x\mu - 2y \mu$$
+$$x-y = (x-y)\mu$$
+$$(x-y)(\mu-1) = 0$$
+Veamos por casos:
+\begin{itemize}
+\item $y = x$\\
+	Al reemplazar esto en $(5)$, obtenemos
+	$$z = 2x^2$$
+	Luego, reemplazando estas cosas en $(4)$, tenemos que
+	$$2x + 4x^2 = 2$$
+	$$2x^2 + x -1 = 0$$
+	$$(2x-1)(x+1) = 0$$
+	$$x_1 = \dfrac{1}{2} \ra P_1\left(\dfrac{1}{2},\dfrac{1}{2},\dfrac{1}{2}\right), \quad 
+	x_2 = -1 \ra P_2(-1,-1,2)$$
+\item $y \neq x$
+	Al dividir por $(x-y)$ en $(1) - (2)$, obtenemos
+	$$\mu - 1 = 0 \ra \mu = 1$$
+	Reemplazando esto en $(1)$, tenemos que
+	$$2x = \lambda + 2x \ra \lambda = 0$$
+	Reemplazando los valores de $\lambda$ y $\mu$ en $(3)$, se tiene que
+	$$2z = -1 \ra z = -\dfrac{1}{2}$$
+	Sin embargo, notemos que al reemplazar esto en $(5)$, llegamos a que
+	$$-\dfrac{1}{2} = x^2 + y^2 \geq 0$$
+	Como esto es una contradicción, no tenemos puntos críticos en este caso.
+\end{itemize}
+Por lo tanto, los únicos puntos críticos que tenemos son $P_1$ y $P_2$. Al evaluarlos en la función objetivo, tenemos que
+$$f(P_1) = f\left(\dfrac{1}{2},\dfrac{1}{2},\dfrac{1}{2}\right) = \dfrac{1}{4} +  \dfrac{1}{4} +  \dfrac{1}{4} =  \dfrac{3}{4}$$
+$$f(P_2) = f(-1,-1,2) = 1+ 1 + 4 = 6$$
+Finalmente, concluimos que el punto perteneciente a la elipse que esta más cercano al origen es $P_1\left(\dfrac{1}{2},\dfrac{1}{2},\dfrac{1}{2}\right)$.
 \end{solucion}
 \item Resolver las siguientes integrales múltiples
 \begin{tasks}(2)
