--- a/2019/2/MAT1620/12/enunciado.tex
+++ b/2019/2/MAT1620/12/enunciado.tex
@@ -118,6 +118,7 @@
 \begin{preguntas}
 \item Dibuje la región de integración de $\displaystyle\int_0^1 \displaystyle\int_x^{2x} dydx$ y luego cambie el orden de integración.
 \item Evalúe la integral $\displaystyle\int_1^2 \displaystyle\int_x^{x^2} 12x dydx$ y luego dibuje la región de integración y exprese la integral en el orden $dxdy$. Integre nuevamente.
+\item Calcule la integral doble $\displaystyle\iint\limits_R e^{x/y} dA$ donde $R$ es la región en $\R^2$ encerrada por las curvas $y=\sqrt[]{x}$ e $y=\sqrt[3]{x}$.
 \item Cambie el orden de integración y calcule cuando sea posible
 \begin{tasks}(2)
 \task $\displaystyle\int_0^1 \displaystyle\int_0^{\sqrt[]{x}} \dfrac{2xy}{1-y^4} dydx$
@@ -125,5 +126,8 @@
 \task $\displaystyle\int_0^1 \displaystyle\int_{arcsen(y)}^{\pi/2} cos(x)\ \sqrt[]{1+cos^2(x)} dxdy$
 \task $\displaystyle\int_0^1 \displaystyle\int_{\sqrt[]{x}}^1 \dfrac{x}{\sqrt[]{x^2+y^2}} dydx$
 \end{tasks}
+\item Utilizando coordenadas polares, calcule:
+	$$ \displaystyle\iint\limits_D \dfrac{x^2y^2}{(x^2+y^2)^2}dxdy $$
+	siendo $D = \{ (x,y) \in \R^2 : 1 < x^2 + y^2 < 2\}$.
 \end{preguntas}
 \end{document}
