--- a/2019/2/MAT1620/12/solucion.tex
+++ b/2019/2/MAT1620/12/solucion.tex
@@ -201,6 +201,44 @@ $$\displaystyle\int_1^2 \displaystyle\int_x^{x^2} 12x dydx =
 		$$\displaystyle\int_1^2 \displaystyle\int_{\sqrt[]{y}}^{y} 12x dxdy + 
 		\displaystyle\int_2^4 \displaystyle\int_{\sqrt[]{y}}^{2} 12x dxdy = 17$$
 \end{solucion}
+\item Calcule la integral doble $\displaystyle\iint\limits_R e^{x/y} dA$ donde $R$ es la región en $\R^2$ encerrada por las curvas $y=\sqrt[]{x}$ e $y=\sqrt[3]{x}$.
+\begin{solucion}
+Para tener más claro qué es lo que estamos integrando, vamos a graficar ambas curvas:
+		\begin{center}
+			\begin{tikzpicture}
+			\begin{axis}[
+			axis lines = left,
+			xlabel = $x$,
+			ylabel = $y$,
+			]
+			\addplot [
+			domain=0:1,  
+			color=red,
+			]
+			{x^(1/3)};
+			\addplot [
+			domain=0:1, 
+			color=blue,
+			]
+			{x^(1/2)};
+			\end{axis}
+			\end{tikzpicture}
+		\end{center}
+		Vemos claramente que se intersectan en $x=0$ y $x=1$. Además, podemos observar que $y=\sqrt[]{x}$ es menor a $y=\sqrt[3]{x}$ en ese intervalo. Por lo tanto, nos queda la integral siguiente:
+		$$\displaystyle\iint\limits_R e^{x/y} dA = 
+		\displaystyle\int_0^1 \displaystyle\int_{\sqrt[]{x}}^{\sqrt[3]{x}} e^{x/y} dydx$$
+		Sin embargo, esta integral no es sencilla de resolver, ya que para eso tendríamos que integrar $e^{1/y}$. Dado esto, vamos a cambiar el orden de integración, utilizando el grafico de arriba. Para esto, despejamos $x$ en ambas funciones, obteniendo
+		$$ y = \sqrt[]{x} \ra x = y^2 \quad; \quad y = \sqrt[3]{x} \ra x=y^3$$
+		Luego, podemos escribir la integral como 
+		$$\displaystyle\int_0^1 \displaystyle\int_{\sqrt[]{x}}^{\sqrt[3]{x}} e^{x/y} dydx = 
+		\displaystyle\int_0^1 \displaystyle\int_{y^3}^{y^2} e^{x/y} dxdy$$
+		Por último, resolvemos esta integral
+		$$= \displaystyle\int_0^1 y e^{x/y} \ev_{y^3}^{y^2} dy$$
+		$$= \displaystyle\int_0^1 y\left(e^{y^2/y} - e^{y^3/y}\right) dy$$
+		$$= \displaystyle\int_0^1 ye^y - ye^{y^2} dy$$
+		Para el primer termino se aplica integración por partes $(u=y, dv=e^y)$ y para el segundo termino se utiliza la sustitución $u=y^2$, obteniendo asi:
+		$$\displaystyle\iint\limits_R e^{x/y} dA = \dfrac{1}{2}(e+1)$$
+\end{solucion}
 \item Cambie el orden de integración y calcule cuando sea posible
 \begin{tasks}(2)
 \task $\displaystyle\int_0^1 \displaystyle\int_0^{\sqrt[]{x}} \dfrac{2xy}{1-y^4} dydx$
@@ -372,6 +410,28 @@ $$\displaystyle\int_1^2 \displaystyle\int_x^{x^2} 12x dydx =
 			$$= \dfrac{1}{2} \cdot \dfrac{2}{3} (2^{3/2}-1) - \dfrac{1}{2}$$
 			$$= \dfrac{2\ \sqrt[]{2}}{3} - \dfrac{5}{6}$$
 \end{enumerate}
+\end{solucion}
+\item Utilizando coordenadas polares, calcule:
+	$$ \displaystyle\iint\limits_D \dfrac{x^2y^2}{(x^2+y^2)^2}dxdy $$
+	siendo $D = \{ (x,y) \in \R^2 : 1 < x^2 + y^2 < 2\}$.
+\begin{solucion}
+Utilizando coordenadas polares, tenemos que
+		$$x = rcos(\theta) \quad , \quad y = rsen(\theta)$$
+		$$dxdy \ra rdrd\theta$$
+		Es evidente entonces que
+		$$ 1 < x^2 + y^2 < 2 \ra 1 < r^2 < 2 \ra 1 < r < \sqrt[]{2}$$
+		Como no hay restricciones que involucren a $\theta$, tenemos que $\theta \in [0, 2\pi]$
+		Luego, 
+		$$\displaystyle\iint\limits_D \dfrac{x^2y^2}{(x^2+y^2)^2}dxdy =
+		 \displaystyle\int_0^{2\pi} \displaystyle\int_1^{\sqrt[]{2}} \dfrac{r^2 cos^2(\theta) r^2 sen^2(\theta)}{r^4}rdrd\theta$$
+		Simplificando nos queda
+		$$ =\displaystyle\int_0^{2\pi} \displaystyle\int_1^{\sqrt[]{2}} r (cos(\theta) sen(\theta))^2drd\theta$$
+		$$ =\displaystyle\int_0^{2\pi} \displaystyle\int_1^{\sqrt[]{2}} r \left(\dfrac{1}{2} sen(2\theta) \right)^2drd\theta$$
+		Notemos que la funcion es separable, por lo que nos queda
+		$$ =\dfrac{1}{4} \left(\displaystyle\int_0^{2\pi} sen^2(2\theta)d\theta \right) \left(\displaystyle\int_1^{\sqrt[]{2}} rdr \right)$$
+		$$ =\dfrac{1}{4} \left(\displaystyle\int_0^{2\pi} \dfrac{1-cos(4\theta)}{2} d\theta \right) \dfrac{1}{2}$$
+		$$ = \dfrac{2\pi}{16}$$
+		$$ = \dfrac{\pi}{8}$$
 \end{solucion}
 \end{preguntas}
 \end{document}
