Enunciado de 2019/2/MAT1620/12.5

--- a/2019/2/MAT1620/12.5/enunciado.tex
+++ b/2019/2/MAT1620/12.5/enunciado.tex
@@ -116,5 +116,21 @@
 \end{center}
 
 \begin{preguntas}
+\item Si $z^3 - xz - y = -2$, encuentre $\dfrac{\delta^2z}{\delta y \delta x}$ cuando $(x,y,z) = (-1, 0, -1)$.
+\item Determine la gradiente de $f$, evalúela en el punto $P$ y encuentre la razón de cambio de $f$ en $P$ en la dirección del vector $u$.
+\begin{enumerate}[a)]
+\item $f(x,y) = sen(2x+3y)$\tab$P=(-6,4), u=\left(\sqrt[]{3}i - j\right)$
+\item $f(x,y) = \dfrac{y^2}{x}$\tab$P=(1,2), u=\left(2i + \sqrt[]{5}j\right)$
+\end{enumerate}
+\item Suponga que $f(x,y)$ es una función con derivadas parciales continuas en el punto $(1,1)$. Asumir que la derivada direccional en $(1,1)$ en la dirección $\langle3,4\rangle$ 			es 1 y en la dirección $\langle5,12\rangle$ es $-1$.
+\begin{enumerate}[a)]
+\item Encontrar la ecuación cartesiana del plano tangente en $(1,1,f(1,1))$.
+\item Encontrar la derivada direccional de $f(x,y)$ en $(1,1)$ en dirección al origen.	
+\end{enumerate}
+\item La temperatura en el punto $(x,y)$ de una lamina metálica viene dada por la función $T(x,y) = \dfrac{x}{x^2+y^2}$. Hallar la razón de crecimiento máximo de la temperatura en el punto $(3,4$) y la dirección en que ella ocurre.
+\item Encuentre y clasifíque los puntos críticos de $f(x,y)=x^3+3xy^2-15x-12y$.
+\item Sea la función
+	$$f(x,y)=ax^2y+bxy^2+\dfrac{a^2y^2}{2}+2y$$
+	determine los valores de $a$ y $b$ para que la función posea un punto silla en $(1,1)$.
 \end{preguntas}
 \end{document}
