--- a/2019/2/MAT1620/12.5/solucion.tex
+++ b/2019/2/MAT1620/12.5/solucion.tex
@@ -370,5 +370,536 @@ Por lo que si es un punto silla.\\
 
 Finalmente, los valores que puede tomar $a$ y $b$ son $(1, -2)$ y $(2, -4)$
 \end{solucion}
+\item Hallar los valores extremos de $f(x,y) = x^2+2y^2-2x+3$ en el disco cerrado $x^2+y^2 \leq 10$.
+\begin{solucion}
+Cuando tenemos restricciones, debemos hacer un paso adicional. \\
+\\
+En primer lugar, encontramos los puntos críticos igual que siempre, es decir, igualando la gradiente a cero y solo guardamos los que cumplan con las restricciones. \\
+\\
+Luego, utilizamos Lagrange para encontrar los puntos críticos de los bordes. Para esto, definimos cada restricción como una función adicional, despejando toda la restricción hacia un lado de tal manera que se iguale a cero. Entonces, resolvemos el sistema
+$$\nabla f = \lambda \nabla g + \mu \nabla h + \dots$$
+$$g(x,y) = 0, \quad h(x,y) = 0, \dots$$
+para obtener los puntos críticos de los bordes.\\
+\\
+Finalmente, evaluamos todos los puntos críticos obtenidos para ver cual es el máximo y cual es el mínimo.\\
+
+Procedamos con le ejercicio:\\
+
+En primer lugar, tenemos que
+$$\nabla f = \begin{pmatrix} 2x - 2 \\ 4y \end{pmatrix} = \begin{pmatrix} 0 \\ 0 \end{pmatrix}$$
+Esto se traduce en el sistema
+$$\begin{array}{rcl} 2x-2 & = & 0 \\ 4y & = & 0 \end{array}
+\ra 
+\begin{array}{rcl} x & = & 1 \\ y & = & 0 \end{array}$$
+Por lo que $P_1(1,0)$. Notemos que este punto si cumple con la restricción, ya que $1^2 + 0^2 \leq 10$, por lo que si es un punto crítico.\\
+\\
+Veamos ahora que sucede con los bordes. Sea
+$$g(x,y) = x^2 + y^2 - 10$$
+$$\nabla g = \begin{pmatrix} 2x \\ 2y \end{pmatrix}$$
+Definimos el sistema
+$$\begin{array}{rcl} \nabla f & = & \lambda \nabla g \\ g(x,y) & = & 0 \end{array}
+\ra 
+\begin{array}{rcl}
+2x-2 & = & \lambda 2x \\
+4y & = & \lambda 2y \\
+x^2+y^2 & = & 10
+\end{array}$$
+Para resolver este sistema, sería tentador pasar el $y$ diviviendo en la segunda ecuación, sin embargo, recordemos que este podría ser cero, por lo que no podemos hacerlo directamente. Si queremos dividir por algun termino que podría ser cero, debemos ver todos los casos posibles (en esta caso son dos, $y = 0$, $y \neq 0$).
+\begin{itemize}
+\item $y = 0$\\
+En este caso, de la últma ecuación obtenemos
+$$x^2 = 10 \ra x = \pm \ \sqrt[]{10}$$
+De aquí se desprende
+$$P_2(\sqrt[]{10}, 0), \quad P_3(-\ \sqrt[]{10}, 0)$$
+\item $y \neq 0$\\
+De la segunda ecuación,
+$$4 = 2\lambda \ra \lambda = 2$$
+Reemplazando esto en la primera,
+$$2x - 2 = 4x \ra x = -1$$
+Por último, de la última ecuación tenemos que
+$$1 + y^2 = 10 \ra y^2 = 9 \ra y_1 = 3, \quad y_2 = -3$$
+Por lo tanto, los puntos obtenidos son
+$$P_4(-1,3), \quad P_5(-1,-3)$$
+\end{itemize}
+Finalmente, evaluamos los puntos críticos obtenidos en la función original, esto es
+$$f(P_1) = f(1,0) = 1-2+3 =2$$
+$$f(P_2) = f(\sqrt[]{10},0) = 10 - 2\ \sqrt[]{10} + 3 = 13 - 2\ \sqrt[]{10}$$
+$$f(P_3) = f(-\ \sqrt[]{10},0) = 10 + 2\ \sqrt[]{10} + 3 = 13 + 2\ \sqrt[]{10}$$
+$$f(P_4) = f(-1,3) = 1+18+2+3=24$$
+$$f(P_5) = f(-1,-3) = 1+18+2+3=24$$
+Por lo tanto, concluimos que el máximo es $24$ ($P_4$ y $P_5$) y el mínimo es 2 ($P_1$).
+\end{solucion}
+\item Determine el máximo y el mínimo valor que alcanza la expresión $z=x^2-4xy-y^2+2y$, para $x\geq0;\quad y\geq0;\quad x+y\leq2$.
+\begin{solucion}
+En primer lugar, tenemos que
+$$\nabla f = \begin{pmatrix} 2x - 4y \\ -4x-2y+2 \end{pmatrix} = \begin{pmatrix} 0 \\ 0 \end{pmatrix}$$
+Esto se traduce en el sistema
+$$\begin{array}{rcl} 2x-4y & = & 0 \\ -4x+2y+2 & = & 0 \end{array}
+\ra 
+x = \dfrac{2}{5}, \quad y = \dfrac{1}{5}$$
+Por lo que nuestro primer punto es $P_1\left(\dfrac{2}{5}, \dfrac{1}{5}\right)$. Notemos que este punto si cumple con las restricción, ya que $\dfrac{2}{5} + \dfrac{1}{5} \leq 2$ y ambos son positivos, por lo que si es un punto crítico.\\
+\\
+Veamos ahora que sucede con los bordes. \\
+\\
+Recordemos para que nos sirve Lagrange. Al armar el sistema de ecuaciones\\ correspondiente, con las restricciones que elijamos, Lagrange nos indicará los puntos críticos que se encuentran cumpliendo \textbf{todas} las restricciones que hayamos agregado al sistema. \\
+\\
+Al tener múltiples restricciones, debemos hacer Lagrange múltiples veces, con todas las restricciones por separado y combinandolas también con las que tengan sentido, esto es, combinando las restricciones que se intersectan entre si.\\
+\\
+Recordemos también que en Lagrange, las inecuaciones se convierten en igualdades, ya que estamos analizando solamente el borde y no su contenido.\\
+
+Notemos que las restricciones de este ejercicio corresponden a un triangulo hecho por los ejes coordenados y la recta $y = 2-x$. Luego, los casos que tenemos que analizar son cada uno de los bordes del triangulo y todas las intersecciones de estos, es decir, las esquinas del triangulo. Estos casos corresponden a los siguientes:
+\begin{itemize}
+	\item $x = 0$
+	\item $y = 0$
+	\item $x + y = 2$
+	\item $x = 0 \wedge y = 0 \ra P_2(0,0)$
+	\item $y = 0 \wedge x + y = 2 \ra P_3(0,2)$
+	\item $x + y = 2 \wedge x = 0 \ra P_4(2,0)$
+\end{itemize}
+Como pueden ver, varios casos se resolvieron de manera inmediata, sin embargo, seguimos teniendo 3 casos que analizar. No obstante, dado que las restricciones son bastante sencillas y tenemos solo dos variables, podemos evitar el uso de Lagrange y simplemente reemplazar cada uno de los casos en la función original y encontrar los puntos críticos derivando la ecuación que obtengamos (que será de una variable).\\
+\\
+Veamos entonces el resto de los casos:
+\begin{itemize}
+	\item $x = 0$\\
+	Al reemplazar en $f(x,y)$, tenemos que
+	$$f(x,y) = -y^2 + 2y = f(y)$$
+	Derivando,
+	$$f'(y) = -2y + 2 = 0 \ra y = 1$$
+	Por lo tanto, tenemos $P_5(0,1)$
+	\item $y = 0$
+	Al reemplazar en $f(x,y)$, tenemos que
+	$$f(x,y) = x^2 = f(x)$$
+	Derivando,
+	$$f'(x) = 2x = 0 \ra x = 0$$
+	Sin embargo, este punto ya lo tenemos ($P_2(0,0)$).
+	\item $x + y = 2$
+	Al reemplazar $y = 2 - x$ en $f(x,y)$, tenemos que
+	$$f(x,y) = x^2 - 4x(2-x) - (2-x)^2 + 2(2-x) = 4x^2 - 6x = f(x)$$
+	Derivando,
+	$$f'(x) = 8x - 6 = 0 \ra x = \dfrac{3}{4}, \quad y = \dfrac{5}{4}$$
+	Por lo que $P_6\left(\dfrac{3}{4},\dfrac{5}{4}\right)$.
+\end{itemize}
+Finalmente, evaluamos todos los puntos en la función dada, esto es
+$$f(P_1) = f\left(\dfrac{2}{5}, \dfrac{1}{5}\right) = \dfrac{1}{5}$$
+$$f(P_2) = f(0,0) = 0$$
+$$f(P_3) = f(0,2) = 0$$
+$$f(P_4) = f(2,0) = 4$$
+$$f(P_5) = f(0,1) = 1$$
+$$f(P_6) = f\left(\dfrac{3}{4}, \dfrac{5}{4}\right) = -\dfrac{9}{4}$$
+Entonces, concluimos que el mínimo es $-\dfrac{9}{4}$ y el máximo es $4$.
+\end{solucion}
+\item Si el plano $x+y+2z=2$ corta al paraboloide $z=x^2+y^2$ se forma una elipse. Encuentre los puntos de la elipse que están más cerca y más lejos del origen.
+\begin{solucion}
+Como tenemos que minimizar la distancia al origen, la función a minimizar es
+$$f(x,y,z) = \sqrt[]{x^2+y^2+z^2}$$
+Notemos también que los óptimos de esta función serán los mismos que los de
+$$f(x,y,z) = x^2 + y^2 + z^2$$
+Por lo tanto, optimizaremos esta última sujeta a las restricciones
+$$x+y+2z=2 \quad, \quad z=x^2+y^2$$
+Como solo nos interesa el borde, es decir, la elipse, podemos hacer Lagrange directamente.\\
+\\
+Sea
+$$g(x,y,z) = x+y+2z - 2, \quad h(x,y,z) = x^2+y^2 - z$$
+Tenemos que
+$$\nabla f = \begin{pmatrix} 2x \\ 2y \\ 2z \end{pmatrix} 
+\quad 
+\nabla h = \begin{pmatrix} 1 \\ 1 \\ 2 \end{pmatrix}
+\quad 
+\nabla g = \begin{pmatrix} 2x \\ 2y \\ -1 \end{pmatrix}$$
+Definimos el sistema
+$$\begin{array}{rcl} \nabla f & = & \lambda \nabla g + \mu \nabla h \\
+g(x,y,z) & = & 0 \\
+h(x,y,z) & = & 0 \end{array}
+\ra 
+\begin{array}{rcll}
+2x & = & \lambda + \mu 2x & (1)\\
+2y & = & \lambda + \mu 2y & (2)\\
+2z & = & 2\lambda - 1 & (3)\\
+x+y+2z & = & 2 & (4)\\
+z & = & x^2+y^2 & (5)
+\end{array}$$
+Haciendo $(1) - (2)$, obtenemos
+$$2x-2y = 2x\mu - 2y \mu$$
+$$x-y = (x-y)\mu$$
+$$(x-y)(\mu-1) = 0$$
+Veamos por casos:
+\begin{itemize}
+\item $y = x$\\
+	Al reemplazar esto en $(5)$, obtenemos
+	$$z = 2x^2$$
+	Luego, reemplazando estas cosas en $(4)$, tenemos que
+	$$2x + 4x^2 = 2$$
+	$$2x^2 + x -1 = 0$$
+	$$(2x-1)(x+1) = 0$$
+	$$x_1 = \dfrac{1}{2} \ra P_1\left(\dfrac{1}{2},\dfrac{1}{2},\dfrac{1}{2}\right), \quad 
+	x_2 = -1 \ra P_2(-1,-1,2)$$
+\item $y \neq x$
+	Al dividir por $(x-y)$ en $(1) - (2)$, obtenemos
+	$$\mu - 1 = 0 \ra \mu = 1$$
+	Reemplazando esto en $(1)$, tenemos que
+	$$2x = \lambda + 2x \ra \lambda = 0$$
+	Reemplazando los valores de $\lambda$ y $\mu$ en $(3)$, se tiene que
+$$2z = -1 \ra z = -\dfrac{1}{2}$$
+	Sin embargo, notemos que al reemplazar esto en $(5)$, llegamos a que
+	$$-\dfrac{1}{2} = x^2 + y^2 \geq 0$$
+	Como esto es una contradicción, no tenemos puntos críticos en este caso.
+\end{itemize}
+Por lo tanto, los únicos puntos críticos que tenemos son $P_1$ y $P_2$. Al evaluarlos en la función objetivo, tenemos que
+$$f(P_1) = f\left(\dfrac{1}{2},\dfrac{1}{2},\dfrac{1}{2}\right) = \dfrac{1}{4} +  \dfrac{1}{4} +  \dfrac{1}{4} =  \dfrac{3}{4}$$
+$$f(P_2) = f(-1,-1,2) = 1+ 1 + 4 = 6$$
+Finalmente, concluimos que el punto perteneciente a la elipse que esta más cercano al origen es $P_1\left(\dfrac{1}{2},\dfrac{1}{2},\dfrac{1}{2}\right)$.
+\end{solucion}
+\item Resolver las siguientes integrales múltiples
+\begin{tasks}(2)
+\task $\displaystyle\int_2^4 \displaystyle\int_1^2 ye^{xy}dxdy$
+\task $\displaystyle\int_{-1}^1\displaystyle\int_{-1}^1 \dfrac{xy}{1+x^2+y^2}dxdy$
+\end{tasks}
+\begin{solucion}
+
+\begin{enumerate}[a)]
+\item $\displaystyle\int_2^4 \displaystyle\int_1^2 ye^{xy}dxdy = 
+			\displaystyle\int_2^4 e^{xy} \ev_1^2 dy = 
+			\displaystyle\int_2^4 e^{2y} - e^{y} dy =
+			\dfrac{1}{2}e^{2y}\ev_2^4 - e^{y}\ev_2^4$\\
+			$=\dfrac{1}{2}e^8 - \dfrac{1}{2}e^4 - e^4 + e^2 =
+			\dfrac{1}{2}e^8 - \dfrac{3}{2}e^4 + e^2$	
+\item $\displaystyle\int_{-1}^1\displaystyle\int_{-1}^1 \dfrac{xy}{1+x^2+y^2}dxdy = 
+			\displaystyle\int_{-1}^1 \dfrac{y}{2} \displaystyle\int_{-1}^1 \dfrac{2x}{1+x^2+y^2}dxdy$\\
+			$= \displaystyle\int_{-1}^1 \dfrac{y}{2} ln(1+x^2+y^2) \ev_{-1}^1 dy = 
+			\displaystyle\int_{-1}^1 \dfrac{y}{2}( ln(2+y^2) - ln(2+y^2) ) dy$\\
+			$=0$
+\end{enumerate}
+\end{solucion}
+\item Calcule
+	$$ \displaystyle\int_0^1 \dfrac{x^b - x^a}{log\ x}dx$$
+	sabiendo que $\displaystyle\int_a^b x^y dy = \dfrac{x^b - x^a}{log\ x}$.
+\begin{solucion}
+Reemplazando con la información dada, tenemos que:
+		$$ \displaystyle\int_0^1 \dfrac{x^b - x^a}{log\ x}dx = \displaystyle\int_0^1 \displaystyle\int_a^b x^y dydx $$
+		Cambiamos el orden de integración, dado que así es más facil integrar
+		$$ = \displaystyle\int_a^b \displaystyle\int_0^1 x^y dxdy $$
+		$$ = \displaystyle\int_a^b \dfrac{x^{y+1}}{y+1} \ev_0^1 dy $$
+		$$ = \displaystyle\int_a^b \dfrac{dy}{y+1} $$
+		$$ = ln|y+1|\ev_a^b $$
+		con lo que:
+		$$ \displaystyle\int_0^1 \dfrac{x^b - x^a}{log\ x}dx = ln\left|\dfrac{b+1}{a+1}\right| $$
+\end{solucion}
+\item Dibuje la región de integración de $\displaystyle\int_0^1 \displaystyle\int_x^{2x} dydx$ y luego cambie el orden de integración.
+\begin{solucion}
+\begin{center}
+		\begin{tikzpicture}
+		\begin{axis}[
+		axis lines = left,
+		xlabel = $x$,
+		ylabel = $y$,
+		]
+		\addplot [
+		domain=0:1,  
+		color=red,
+		]
+		{2*x};
+		\addplot [
+		domain=0:1, 
+		color=red,
+		]
+		{x};
+		\addplot [
+		domain=0.5:1, 
+		color=blue,
+		]
+		{1};
+		\addplot [
+		domain=0:1,  
+		color=green,
+		]
+		coordinates {(1,0) (1,2)};
+		
+		\end{axis}
+		\end{tikzpicture}
+		\end{center}
+		Como queremos cambiar el orden de integración, despejamos estas funciones en función de la otra variable, es decir:
+		$$ y = 2x \ra x = \dfrac{y}{2} \quad; \quad y=x \ra x=y$$
+		Luego, cambiamos el orden de integración, teniendo cuidado con los intervalos donde estamos abajo y arriba de la linea azul.
+		$$\displaystyle\int_0^1 \displaystyle\int_x^{2x} dydx = 
+		\displaystyle\int_0^1 \displaystyle\int_{y/2}^{y} dxdy + 
+		\displaystyle\int_1^2 \displaystyle\int_{y/2}^{1} dxdy$$
+\end{solucion}
+\item Evalúe la integral $\displaystyle\int_1^2 \displaystyle\int_x^{x^2} 12x dydx$ y luego dibuje la región de integración y exprese la integral en el orden $dxdy$. Integre nuevamente.
+\begin{solucion}
+$$\displaystyle\int_1^2 \displaystyle\int_x^{x^2} 12x dydx =
+		\displaystyle\int_1^2 12x(x^2-x)dx = \displaystyle\int_1^2 12(x^3-x^2)dx = 17$$
+		\begin{center}
+			\begin{tikzpicture}
+			\begin{axis}[
+			axis lines = left,
+			xlabel = $x$,
+			ylabel = $y$,
+			]
+			\addplot [
+			domain=0:2,  
+			color=red,
+			]
+			{x};
+			\addplot [
+			domain=0:2, 
+			color=red,
+			]
+			{x^2};
+			\addplot [
+			domain=0:2, 
+			color=blue,
+			]
+			{2};
+			\addplot [
+			domain=0:2,  
+			color=green,
+			]
+			coordinates {(2,0) (2,4)};
+			
+			\end{axis}
+			\end{tikzpicture}
+		\end{center}
+		Despejamos estas funciones en función de la otra variable
+		$$ y = x^2 \ra x = \sqrt[]{y} \quad; \quad y=x \ra x=y$$
+		y cambiamos el orden de integración
+		$$\displaystyle\int_1^2 \displaystyle\int_x^{x^2} 12x dydx = 
+		\displaystyle\int_1^2 \displaystyle\int_{\sqrt[]{y}}^{y} 12x dxdy + 
+		\displaystyle\int_2^4 \displaystyle\int_{\sqrt[]{y}}^{2} 12x dxdy$$
+		Resolvemos ahora esta integral y obtenemos que
+		$$\displaystyle\int_1^2 \displaystyle\int_{\sqrt[]{y}}^{y} 12x dxdy + 
+		\displaystyle\int_2^4 \displaystyle\int_{\sqrt[]{y}}^{2} 12x dxdy = 17$$
+\end{solucion}
+\item Calcule la integral doble $\displaystyle\iint\limits_R e^{x/y} dA$ donde $R$ es la región en $\R^2$ encerrada por las curvas $y=\sqrt[]{x}$ e $y=\sqrt[3]{x}$.
+\begin{solucion}
+Para tener más claro qué es lo que estamos integrando, vamos a graficar ambas curvas:
+		\begin{center}
+			\begin{tikzpicture}
+			\begin{axis}[
+			axis lines = left,
+			xlabel = $x$,
+			ylabel = $y$,
+			]
+			\addplot [
+			domain=0:1,  
+			color=red,
+			]
+			{x^(1/3)};
+			\addplot [
+			domain=0:1, 
+			color=blue,
+			]
+			{x^(1/2)};
+			\end{axis}
+			\end{tikzpicture}
+		\end{center}
+		Vemos claramente que se intersectan en $x=0$ y $x=1$. Además, podemos observar que $y=\sqrt[]{x}$ es menor a $y=\sqrt[3]{x}$ en ese intervalo. Por lo tanto, nos queda la integral siguiente:
+		$$\displaystyle\iint\limits_R e^{x/y} dA = 
+		\displaystyle\int_0^1 \displaystyle\int_{\sqrt[]{x}}^{\sqrt[3]{x}} e^{x/y} dydx$$
+		Sin embargo, esta integral no es sencilla de resolver, ya que para eso tendríamos que integrar $e^{1/y}$. Dado esto, vamos a cambiar el orden de integración, utilizando el grafico de arriba. Para esto, despejamos $x$ en ambas funciones, obteniendo
+		$$ y = \sqrt[]{x} \ra x = y^2 \quad; \quad y = \sqrt[3]{x} \ra x=y^3$$
+		Luego, podemos escribir la integral como 
+		$$\displaystyle\int_0^1 \displaystyle\int_{\sqrt[]{x}}^{\sqrt[3]{x}} e^{x/y} dydx = 
+		\displaystyle\int_0^1 \displaystyle\int_{y^3}^{y^2} e^{x/y} dxdy$$
+		Por último, resolvemos esta integral
+		$$= \displaystyle\int_0^1 y e^{x/y} \ev_{y^3}^{y^2} dy$$
+		$$= \displaystyle\int_0^1 y\left(e^{y^2/y} - e^{y^3/y}\right) dy$$
+		$$= \displaystyle\int_0^1 ye^y - ye^{y^2} dy$$
+		Para el primer termino se aplica integración por partes $(u=y, dv=e^y)$ y para el segundo termino se utiliza la sustitución $u=y^2$, obteniendo asi:
+		$$\displaystyle\iint\limits_R e^{x/y} dA = \dfrac{1}{2}(e+1)$$
+\end{solucion}
+\item Cambie el orden de integración y calcule cuando sea posible
+\begin{tasks}(2)
+\task $\displaystyle\int_0^1 \displaystyle\int_0^{\sqrt[]{x}} \dfrac{2xy}{1-y^4} dydx$
+\task $\displaystyle\int_0^1 \displaystyle\int_{z^2}^z ze^{-y^2} dydz$
+\task $\displaystyle\int_0^1 \displaystyle\int_{arcsen(y)}^{\pi/2} cos(x)\ \sqrt[]{1+cos^2(x)} dxdy$
+\task $\displaystyle\int_0^1 \displaystyle\int_{\sqrt[]{x}}^1 \dfrac{x}{\sqrt[]{x^2+y^2}} dydx$
+\end{tasks}
+\begin{solucion}
+
+\begin{enumerate}[a)]
+\item $\displaystyle\int_0^1 \displaystyle\int_0^{\sqrt[]{x}} \dfrac{2xy}{1-y^4} dydx$\\
+			\\
+			En primer lugar, vamos a graficar nuestra area de integración:
+			\begin{center}
+				\begin{tikzpicture}
+				\begin{axis}[
+				axis lines = left,
+				xlabel = $x$,
+				ylabel = $y$,
+				]
+				\addplot [
+				domain=0:1,  
+				color=red,
+				]
+				{x^(1/2)};
+				\addplot [
+				domain=0:1, 
+				color=red,
+				]
+				{0};
+				\addplot [
+				domain=0:1, 
+				color=green,
+				]
+				coordinates {(1,0) (1,1)};
+				\end{axis}
+				\end{tikzpicture}
+			\end{center}
+			Tenemos que $y=\sqrt[]{x} \ra x = y^2$ y podemos ver que la coordenada y se mueve entre $0$ y $1$, por lo tanto:
+			$$\displaystyle\int_0^1 \displaystyle\int_0^{\sqrt[]{x}} \dfrac{2xy}{1-y^4} dydx
+			= \displaystyle\int_0^1 \displaystyle\int_{y^2}^1 \dfrac{2xy}{1-y^4} dxdy$$
+			Ahora, la resolvemos:
+			$$= \displaystyle\int_0^1 \displaystyle\int_{y^2}^1 \dfrac{2xy}{1-y^4} dxdy$$
+			$$= \displaystyle\int_0^1 \dfrac{y}{1-y^4} \left(\displaystyle\int_{y^2}^1 2x dx \right) dy$$
+			$$= \displaystyle\int_0^1 \dfrac{y}{1-y^4} x^2 \ev_{y^2}^1 dy$$
+			$$= \displaystyle\int_0^1 \dfrac{y}{1-y^4} (1-y^4) dy$$
+			$$= \displaystyle\int_0^1 y dy$$
+			$$= \dfrac{1}{2}$$
+\item $\displaystyle\int_0^1 \displaystyle\int_{z^2}^z ze^{-y^2} dydz$\\
+			\\
+			Graficamos la región:
+			\begin{center}
+				\begin{tikzpicture}
+				\begin{axis}[
+				axis lines = left,
+				xlabel = $z$,
+				ylabel = $y$,
+				]
+				\addplot [
+				domain=0:1,  
+				color=red,
+				]
+				{x^2};
+				\addplot [
+				domain=0:1, 
+				color=red,
+				]
+				{x};
+				\end{axis}
+				\end{tikzpicture}
+			\end{center}
+			Tenemos que $ y = z^2 \ra z = \sqrt[]{y}$ y $y=z \ra z=y$. Viendo el gráfico podemos ver que al hacer el cambio del orden de integración, seguiremos teniendo una sola integral, con lo que
+			$$\displaystyle\int_0^1 \displaystyle\int_{z^2}^z ze^{-y^2} dydz = 
+			\displaystyle\int_0^1 \displaystyle\int_{y}^{\sqrt[]{y}} ze^{-y^2} dzdy$$
+			Evaluando esta integral, tenemos que
+			$$= \displaystyle\int_0^1 \displaystyle\int_{y}^{\sqrt[]{y}} ze^{-y^2} dzdy$$
+			$$= \displaystyle\int_0^1 e^{-y^2} \left(\displaystyle\int_{y}^{\sqrt[]{y}} z dz \right) dy$$
+			$$= \displaystyle\int_0^1 e^{-y^2} (y-y^2) dy$$
+			Podemos seguir desarrollando, pero eventualmente tendremos que calcular $\displaystyle\int_0^1 e^{-y^2}dy$, que no tiene primitiva (no se puede calcular).
+\item $\displaystyle\int_0^1 \displaystyle\int_{arcsen(y)}^{\pi/2} cos(x)\ \sqrt[]{1+cos^2(x)} dxdy$\\
+			\\
+			Partimos graficando la región. Notemos que para graficar con los ejes que estamos acostumbrados, debemos graficar la función $y=sen(x)$, la cual es equivalente a $x = arcsen(y)$
+			\begin{center}
+				\begin{tikzpicture}
+				\begin{axis}[
+				axis lines = left,
+				xlabel = $x$,
+				ylabel = $y$,
+				xtick={
+					0.78539, 1.5707
+				},
+				xticklabels={
+					$\frac{\pi}{4}$, $\frac{\pi}{2}$
+				}
+				]
+				\addplot [
+				domain=0:1.5707,  
+				color=blue,
+				]
+				{sin(deg(x))};
+				\addplot [
+				domain=0:1.5707, 
+				color=blue,
+				]
+				{0};
+				\addplot [
+				domain=0:1.5707, 
+				color=blue,
+				]
+				coordinates {(1.5707,0) (1.5707,1)};
+				\end{axis}
+				\end{tikzpicture}
+			\end{center}		
+			Podemos ver que $x$ va entre $0$ y $\dfrac{\pi}{2}$. Además, $y$ va entre $0$ y $sen(x)$. Dicho esto, tenemos que
+			$$\displaystyle\int_0^1 \displaystyle\int_{arcsen(y)}^{\pi/2} cos(x)\ \sqrt[]{1+cos^2(x)} dxdy=
+			\displaystyle\int_0^{\pi/2} \displaystyle\int_0^{sen(x)} cos(x)\ \sqrt[]{1+cos^2(x)} dydx$$
+			Resolviendo:
+			$$=\displaystyle\int_0^{\pi/2} \displaystyle\int_0^{sen(x)} cos(x)\ \sqrt[]{1+cos^2(x)} dydx$$
+			$$=\displaystyle\int_0^{\pi/2} cos(x)\ \sqrt[]{1+cos^2(x)} \left( \displaystyle\int_0^{sen(x)} dy \right) dx$$
+			$$=\displaystyle\int_0^{\pi/2} sen(x) cos(x)\ \sqrt[]{1+cos^2(x)} dx$$
+			Hacemos el cambio de variables
+			$$ u = cos^2(x) \ra du = -2cos(x)sen(x)dx $$
+			Con lo que nos queda:
+			$$=\dfrac{1}{2}\displaystyle\int_0^1 \sqrt[]{1+u} du$$
+			$$=\dfrac{1}{2} \cdot \dfrac{2}{3}(1+u)^{3/2} \ev_0^1$$
+			$$=\dfrac{1}{3} (2^{3/2}-1)$$
+\item $\displaystyle\int_0^1 \displaystyle\int_{\sqrt[]{x}}^1 \dfrac{x}{\sqrt[]{x^2+y^2}} dydx$\\
+			\\
+			Graficamos:
+			\begin{center}
+				\begin{tikzpicture}
+				\begin{axis}[
+				axis lines = left,
+				xlabel = $x$,
+				ylabel = $y$,
+				]
+				\addplot [
+				domain=0:1,  
+				color=green,
+				]
+				{x^(1/2)};
+				\addplot [
+				domain=0:1, 
+				color=green,
+				]
+				{1};
+				\addplot [
+				domain=0:1, 
+				color=green,
+				]
+				coordinates {(0,0) (0,1)};
+				\end{axis}
+				\end{tikzpicture}
+			\end{center}
+			Tenemos que $y=\sqrt[]{x} \ra x = y^2$. De esta forma,
+			$$\displaystyle\int_0^1 \displaystyle\int_{\sqrt[]{x}}^1 \dfrac{x}{\sqrt[]{x^2+y^2}} dydx =
+			\displaystyle\int_0^1 \displaystyle\int_0^{y^2} \dfrac{x}{\sqrt[]{x^2+y^2}} dxdy$$
+			Resolviendo esta integral, tenemos
+			$$= \displaystyle\int_0^1 \displaystyle\int_0^{y^2} \dfrac{x}{\sqrt[]{x^2+y^2}} dxdy$$
+			$$= \displaystyle\int_0^1 \left( \displaystyle\int_0^{y^2} \dfrac{1}{2} \dfrac{2x}{\sqrt[]{x^2+y^2}} dx \right) dy$$
+			Haciendo el cambio de variable $u=x^2 \ra du = 2xdx$ en la integral de más adentro
+			$$= \displaystyle\int_0^1 \left( \displaystyle\int_0^{y^4} \dfrac{du}{2\ \sqrt[]{u+y^2}} \right) dy$$
+			$$= \displaystyle\int_0^1\sqrt[]{u+y^2} \ev_0^{y^4} dy$$
+			$$= \displaystyle\int_0^1\sqrt[]{y^4+y^2} -|y| dy$$
+			Como el intervalo de integración es positivo, sabemos que $|y| = y$
+			$$= \displaystyle\int_0^1 y\ \sqrt[]{y^2+1} -y dy$$
+			Haciendo $u=y^2 \ra du = 2ydy$
+			$$= \dfrac{1}{2}\displaystyle\int_0^1 y\ \sqrt[]{u+1} du - \dfrac{1}{2}$$
+			$$= \dfrac{1}{2} \cdot \dfrac{2}{3} (2^{3/2}-1) - \dfrac{1}{2}$$
+			$$= \dfrac{2\ \sqrt[]{2}}{3} - \dfrac{5}{6}$$
+\end{enumerate}
+\end{solucion}
+\item Utilizando coordenadas polares, calcule:
+	$$ \displaystyle\iint\limits_D \dfrac{x^2y^2}{(x^2+y^2)^2}dxdy $$
+	siendo $D = \{ (x,y) \in \R^2 : 1 < x^2 + y^2 < 2\}$.
+\begin{solucion}
+Utilizando coordenadas polares, tenemos que
+		$$x = rcos(\theta) \quad , \quad y = rsen(\theta)$$
+		$$dxdy \ra rdrd\theta$$
+		Es evidente entonces que
+		$$ 1 < x^2 + y^2 < 2 \ra 1 < r^2 < 2 \ra 1 < r < \sqrt[]{2}$$
+		Como no hay restricciones que involucren a $\theta$, tenemos que $\theta \in [0, 2\pi]$
+		Luego, 
+		$$\displaystyle\iint\limits_D \dfrac{x^2y^2}{(x^2+y^2)^2}dxdy =
+		 \displaystyle\int_0^{2\pi} \displaystyle\int_1^{\sqrt[]{2}} \dfrac{r^2 cos^2(\theta) r^2 sen^2(\theta)}{r^4}rdrd\theta$$
+		Simplificando nos queda
+		$$ =\displaystyle\int_0^{2\pi} \displaystyle\int_1^{\sqrt[]{2}} r (cos(\theta) sen(\theta))^2drd\theta$$
+		$$ =\displaystyle\int_0^{2\pi} \displaystyle\int_1^{\sqrt[]{2}} r \left(\dfrac{1}{2} sen(2\theta) \right)^2drd\theta$$
+		Notemos que la funcion es separable, por lo que nos queda
+		$$ =\dfrac{1}{4} \left(\displaystyle\int_0^{2\pi} sen^2(2\theta)d\theta \right) \left(\displaystyle\int_1^{\sqrt[]{2}} rdr \right)$$
+		$$ =\dfrac{1}{4} \left(\displaystyle\int_0^{2\pi} \dfrac{1-cos(4\theta)}{2} d\theta \right) \dfrac{1}{2}$$
+		$$ = \dfrac{2\pi}{16}$$
+		$$ = \dfrac{\pi}{8}$$
+\end{solucion}
 \end{preguntas}
 \end{document}
