--- a/2019/2/MAT1620/11/enunciado.tex
+++ b/2019/2/MAT1620/11/enunciado.tex
@@ -59,7 +59,7 @@
 
 \newcommand{\ayudantia}{{\sc Ayudantía 11}}
 \newcommand{\tituloayu}{Lagrange e integrales dobles}
-\newcommand{\fecha}{12 de diciembre de 2019}
+\newcommand{\fecha}{12 de noviembre de 2019}
 \newcommand{\sigla}{MAT1620}
 \newcommand{\nombre}{Cálculo II}
 \newcommand{\profesor}{Wolfgang Rivera}
