--- a/2019/2/MAT1620/12/solucion.tex
+++ b/2019/2/MAT1620/12/solucion.tex
@@ -59,7 +59,7 @@
 
 \newcommand{\ayudantia}{{\sc Ayudantía 12}}
 \newcommand{\tituloayu}{Cambio de orden de integración y uso de coordenadas polares}
-\newcommand{\fecha}{19 de diciembre de 2019}
+\newcommand{\fecha}{19 de noviembre de 2019}
 \newcommand{\sigla}{MAT1620}
 \newcommand{\nombre}{Cálculo II}
 \newcommand{\profesor}{Wolfgang Rivera}
