--- a/2019/2/MAT1620/12.5/solucion.tex
+++ b/2019/2/MAT1620/12.5/solucion.tex
@@ -59,7 +59,7 @@
 
 \newcommand{\ayudantia}{{\sc Ayudantía 12.5}}
 \newcommand{\tituloayu}{Compilado I3}
-\newcommand{\fecha}{20 de diciembre de 2019}
+\newcommand{\fecha}{20 de noviembre de 2019}
 \newcommand{\sigla}{MAT1620}
 \newcommand{\nombre}{Cálculo II}
 \newcommand{\profesor}{Wolfgang Rivera}
